// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignPoliciesModal expect not to render anything for a closed modal 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={
    <body
      class=""
    >
      <div>
        <div
          class="pf-c-backdrop"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              aria-describedby="pf-modal-part-2"
              aria-labelledby="pf-modal-part-1"
              aria-modal="true"
              class="pf-c-modal-box pf-m-sm"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/ModalContent"
              data-ouia-safe="true"
              id="pf-modal-part-0"
              role="dialog"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    transform=""
                  />
                </svg>
              </button>
              <header
                class="pf-c-modal-box__header"
              >
                <h1
                  class="pf-c-modal-box__title pf-c-modal-box__title"
                  id="pf-modal-part-1"
                >
                  Edit policies for myhost
                </h1>
              </header>
              <div
                class="pf-c-modal-box__body"
                id="pf-modal-part-2"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Choose which policies 
                    myhost
                     should be a part of. Note: Only policies for this host operating system are shown.
                  </p>
                </div>
                <br />
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    <div
                      class="pf-c-check"
                    >
                      <input
                        aria-invalid="false"
                        checked=""
                        class="pf-c-check__input"
                        id="1"
                        name="policies[0]"
                        type="checkbox"
                        value="1"
                      />
                      <label
                        class="pf-c-check__label"
                        for="1"
                      >
                        profile1
                      </label>
                    </div>
                  </p>
                </div>
              </div>
              <footer
                class="pf-c-modal-box__footer"
              >
                <button
                  aria-disabled="false"
                  aria-label="save"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Save
                </button>
                <button
                  aria-disabled="false"
                  aria-label="cancel"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </footer>
            </div>
          </div>
        </div>
      </div>
      <div />
    </body>
  }
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isFooterLeftAligned={true}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;

exports[`AssignPoliciesModal expect to render an open modal without error 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={
    <body
      class="pf-c-backdrop__open"
    >
      <div>
        <div
          class="pf-c-backdrop"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              aria-describedby="pf-modal-part-2"
              aria-labelledby="pf-modal-part-1"
              aria-modal="true"
              class="pf-c-modal-box pf-m-sm"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/ModalContent"
              data-ouia-safe="true"
              id="pf-modal-part-0"
              role="dialog"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    transform=""
                  />
                </svg>
              </button>
              <header
                class="pf-c-modal-box__header"
              >
                <h1
                  class="pf-c-modal-box__title pf-c-modal-box__title"
                  id="pf-modal-part-1"
                >
                  Edit policies for myhost
                </h1>
              </header>
              <div
                class="pf-c-modal-box__body"
                id="pf-modal-part-2"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Choose which policies 
                    myhost
                     should be a part of. Note: Only policies for this host operating system are shown.
                  </p>
                </div>
                <br />
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    <div
                      class="pf-c-check"
                    >
                      <input
                        aria-invalid="false"
                        checked=""
                        class="pf-c-check__input"
                        id="1"
                        name="policies[0]"
                        type="checkbox"
                        value="1"
                      />
                      <label
                        class="pf-c-check__label"
                        for="1"
                      >
                        profile1
                      </label>
                    </div>
                  </p>
                </div>
              </div>
              <footer
                class="pf-c-modal-box__footer"
              >
                <button
                  aria-disabled="false"
                  aria-label="save"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Save
                </button>
                <button
                  aria-disabled="false"
                  aria-label="cancel"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </body>
  }
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isFooterLeftAligned={true}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;

exports[`AssignPoliciesModal renders empty state if no OS is matching the system 1`] = `
<Modal
  actions={
    Array [
      <SubmitPoliciesButton
        aria-label="save"
        dispatch={[Function]}
        policyIds={Array []}
        systemId="1"
        toggle={[MockFunction]}
        variant="primary"
      />,
      <Button
        aria-label="cancel"
        onClick={[Function]}
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={
    <body
      class="pf-c-backdrop__open"
    >
      <div
        aria-hidden="true"
      >
        <div
          class="pf-c-backdrop"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              aria-describedby="pf-modal-part-2"
              aria-labelledby="pf-modal-part-1"
              aria-modal="true"
              class="pf-c-modal-box pf-m-sm"
              data-ouia-component-id="0"
              data-ouia-component-type="PF4/ModalContent"
              data-ouia-safe="true"
              id="pf-modal-part-0"
              role="dialog"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    transform=""
                  />
                </svg>
              </button>
              <header
                class="pf-c-modal-box__header"
              >
                <h1
                  class="pf-c-modal-box__title pf-c-modal-box__title"
                  id="pf-modal-part-1"
                >
                  Edit policies for myhost
                </h1>
              </header>
              <div
                class="pf-c-modal-box__body"
                id="pf-modal-part-2"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Choose which policies 
                    myhost
                     should be a part of. Note: Only policies for this host operating system are shown.
                  </p>
                </div>
                <br />
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    <div
                      class="pf-c-check"
                    >
                      <input
                        aria-invalid="false"
                        checked=""
                        class="pf-c-check__input"
                        id="1"
                        name="policies[0]"
                        type="checkbox"
                        value="1"
                      />
                      <label
                        class="pf-c-check__label"
                        for="1"
                      >
                        profile1
                      </label>
                    </div>
                  </p>
                </div>
              </div>
              <footer
                class="pf-c-modal-box__footer"
              >
                <button
                  aria-disabled="false"
                  aria-label="save"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Save
                </button>
                <button
                  aria-disabled="false"
                  aria-label="cancel"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </footer>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
      />
      <div>
        <div
          class="pf-c-backdrop"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              aria-describedby="pf-modal-part-4"
              aria-labelledby="pf-modal-part-3"
              aria-modal="true"
              class="pf-c-modal-box pf-m-sm"
              data-ouia-component-id="4"
              data-ouia-component-type="PF4/ModalContent"
              data-ouia-safe="true"
              id="pf-modal-part-2"
              role="dialog"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    transform=""
                  />
                </svg>
              </button>
              <header
                class="pf-c-modal-box__header"
              >
                <h1
                  class="pf-c-modal-box__title pf-c-modal-box__title"
                  id="pf-modal-part-3"
                >
                  Edit policies for myhost
                </h1>
              </header>
              <div
                class="pf-c-modal-box__body"
                id="pf-modal-part-4"
              >
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Choose which policies 
                    myhost
                     should be a part of. Note: Only policies for this host operating system are shown.
                  </p>
                </div>
                <br />
                <div
                  class="pf-c-content"
                >
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    No eligible policies for this system.
                  </p>
                </div>
              </div>
              <footer
                class="pf-c-modal-box__footer"
              >
                <button
                  aria-disabled="false"
                  aria-label="save"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="6"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  Save
                </button>
                <button
                  aria-disabled="false"
                  aria-label="cancel"
                  class="pf-c-button pf-m-secondary"
                  data-ouia-component-id="7"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </body>
  }
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isFooterLeftAligned={true}
  isOpen={[Function]}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit policies for myhost"
  variant="small"
/>
`;
